fix button font color issue when displayed on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,8 @@ main {
 }
 
 .card.small {
-  font-size: 12px; }
+  font-size: 12px; 
+}
 
 h1 {
   font-size: 18px;
@@ -74,6 +75,7 @@ h1 {
   border: none;
   border-radius: 10px;
   padding: 8px;
+  color: black;
 }
 
 #reset-btn {
@@ -82,6 +84,7 @@ h1 {
   border: none;
   border-radius: 10px;
   padding: 8px;
+  color: black;
 }
 
 .computer {
@@ -125,10 +128,11 @@ h1 {
 }
 
 .information > #message {
+  text-align: center; 
+  place-self: center; 
+  font-size: 10px; 
   text-align: center;
-  place-self: center;
-  font-size: 10px;
-  color: black;
+  padding: 5px;
 }
 
 .information > img {
@@ -137,15 +141,7 @@ h1 {
   border-radius: 10px;
   justify-self: center;
   align-self: center;
-  -webkit-box-shadow: inset 0px 0px 85px rgba(0,0,0,0.4);
-	-moz-box-shadow:    inset 0px 0px 85px rgba(0,0,0,0.4);
-	box-shadow:         inset 0px 0px 85px rgba(0,0,0,0.4);
-}
-
-#message {
-  text-align: center;
-  font-size: 12px;
-  padding: 5px;
+	box-shadow: inset 0px 0px 85px rgba(0,0,0,0.4);
 }
 
 #message.background {
